align fix and image fix, add contact page

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ header{
     border: 0;
     font-size: 11px !important;
     letter-spacing: 4px;
-    opacity: 0.9;
+    /* opacity: 0.9; */
   }
   .navbar li a, .navbar .navbar-brand {
     color: #bfbfbf !important;
@@ -159,6 +159,11 @@ a{
   padding-top: 3em;
 }
 
+.homeh2_p{
+  text-align: center;
+  padding-top: 2em;
+}
+
 .homelist1{
   text-align: justify;
   margin: 5em;
@@ -167,6 +172,19 @@ a{
 .homelist2{
   text-align: justify;
   margin: 5em;
+}
+
+.homelist2_p{
+  text-align: justify;
+  margin: 2em;
+}
+.contactpart{
+  margin: 3em;
+  /* border: 1;
+  border-color: #333333; */
+}
+.contact{
+  text-align: center;
 }
 /*
   COMBINED ELEMENTS -------------------
@@ -192,10 +210,83 @@ a{
   color:white;
 }
 
+/* styleguide margin */
+#interactive_elements{
+  margin-left: 3em;
+  margin-right: 3em;
+}
+#text_elements{
+  margin-left: 3em;
+  margin-right: 3em;
+}
+#combined_elements{
+  margin-left: 3em;
+  margin-right: 3em;
+}
+#citations{
+  margin-left: 3em;
+  margin-right: 3em;
+}
 
 
 
 @media screen and (max-width: 750px) {
+  .box {
+    float: left;
+    width: 100%; /* three boxes (use 25% for four, and 50% for two, etc) */
+    /* padding: 50px; /* if you want space between the images */ */
+  }
+  .box2{
+    float: left;
+    width: 50%;
+  }
+
+  .box4{
+    float: right;
+    width: 50%;
+  }
+  .color1{
+    float: left;
+    width: 100%;
+    background-color: #333333;
+    color: white;
+  }
+  .color2{
+    float: left;
+    width: 100%;
+    background-color: #bfbfbf;
+  }
+  .color2{
+    float: left;
+    width: 100%;
+    background-color: #f5f5f5;
+  }
+    .navbar {
+    font-family: Montserrat, sans-serif;
+    margin-bottom: 0;
+    background-color: #2d2d30;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 4px;
+    opacity: 0.9;
+  }
+  .navbar li a, .navbar .navbar-brand {
+    color: #d5d5d5 !important;
+  }
+  .navbar-nav li a:hover {
+    color: #fff !important;
+  }
+  .navbar-nav li.active a {
+    color: #fff !important;
+    background-color: #29292c !important;
+  }
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+  }
+
+}
+
+@media screen and (max-width: 1350px) {
   .box {
     float: left;
     width: 100%; /* three boxes (use 25% for four, and 50% for two, etc) */
